# Simulatore

./: .gitignore  .gitmodule  .gitmodules  CMakeLists.txt
.github/workflows/: release.yml
etc/: dba.txt  engine.txt
output/: comandi.txt  propeller.txt  stati.txt  warning_errori.txt
src/: CMakeLists.txt  main.c
src/lib/: CMakeLists.txt  aeromobile.c  atmosfera.c  checking.c  comando.c  integratore.c  interpola.c  lettura_dati.c  propeller.c  routh.c  trim.c
src/lib/include/: aeromobile.h  atmosfera.h  checking.h  comando.h  integratore.h  interpola.h  lettura_dati.h  propeller.h  routh.h  trim.h
test/: CMakeLists.txt  test_aeromobile.c  test_atmosfera.c  test_checking.c  test_comando.c  test_integratore.c  test_interpola.c  test_lettura.c  test_propeller.c  test_routh.c  test_trim.c
tools/: octave-workspace  post_proces.m
